--- a/content/docs/getting-started/first-page.mdx
+++ b/content/docs/getting-started/first-page.mdx
@@ -19,6 +19,7 @@ description: "A brief description for search engines and previews"
 ```
 
 **These two fields are required:**
+
 - `title`: The page title (displays in browser tab, breadcrumbs, sidebar)
 - `description`: Used for SEO and page metadata
 
@@ -31,7 +32,7 @@ This is your content written in Markdown format.
 
 ## Subheading
 
-You can use **bold**, *italic*, `code`, and more.
+You can use **bold**, _italic_, `code`, and more.
 ```
 
 ## Creating Pages
@@ -54,6 +55,7 @@ content/my-docs/
 ### Create the pages:
 
 **content/my-docs/guides/installation.md**
+
 ```markdown
 ---
 title: "Installation"
@@ -66,6 +68,7 @@ Installation steps go here...
 ```
 
 **content/my-docs/concepts/terminology.md**
+
 ```markdown
 ---
 title: "Key Terminology"
@@ -88,6 +91,7 @@ URL:     https://yourdocs.com/my-docs/guides/installation
 ```
 
 Breaking this down:
+
 - `content/my-docs/` - collection directory (from config)
 - `guides/installation` - becomes the slug
 - `/my-docs/` - the route prefix (from config)
@@ -128,12 +132,14 @@ To change the order, see [Manual Configuration](/docs/generation-strategies/manu
 ## Next Steps
 
 Now you know how to:
+
 - ✅ Create markdown files
 - ✅ Write frontmatter
 - ✅ Organize in folders
 - ✅ Have them appear automatically
 
 Learn about:
+
 - [Understanding Entries](/docs/navigation-system/core-concepts/entries)
 - [Auto-Generation vs Manual](/docs/generation-strategies/auto-generation/how-it-works)
 - [Advanced Frontmatter](/docs/content/frontmatter/navigation-overrides)
