refactor(navigation): improve navigation building logic

--- a/content/docs/content/markdown/working-with-images.mdx
+++ b/content/docs/content/markdown/working-with-images.mdx
@@ -204,7 +204,7 @@ git commit -m "Update setup guide and screenshot"
 
 For large images, consider Git LFS:
 
-```gitattributes
+```shell
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
